<resources>
    <string name="app_name">LavillaSweets</string>

    <string name="nav_orders">Orders</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_comments">Comments</string>
    <string name="nav_settings">Settings</string>


    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="signup_attention">Sign up,please</string>
    <string name="signup_fname">First name</string>
    <string name="signup_lname">Last name</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="signup_rewrite_password">Re-write password</string>
    <string name="signup_phone_number">Phone number</string>
    <string name="signup_Address">Address</string>
    <string name="signup_register">Register</string>
    <string name="signup_dyhac">Do you have an account?</string>
    <string name="signup_sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="signup_fullname">Full name</string>
    <string name="signup_email">Email</string>
    <string name="nav_home">Home</string>
    <string name="sign_out">Log out</string>
    <string name="your_name">Your name</string>
    <string name="quantity">Quantity</string>
    <string name="confectionary_name">Confectionary Name</string>
    <string name="design_or_filling">Design or filling</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="title_order">Orders</string>
    <string name="make_an_order">Make an order!</string>
    <string name="title_make_order">Make order</string>
    <string name="nav_order_for_director">Orders for director</string>
    <string name="title_order_for_director">All orders</string>
    <string name="id_of_order">ID of order</string>
    <string name="search">Search</string>
</resources>
