<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nav_drawer"
    android:orientation="vertical"
    tools:context=".OrderActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/title_make_order"
            android:textColor="@color/white"
            android:textSize="@dimen/sp35"
            android:textStyle="bold|italic" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edit_text_yourname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/background_edit_text"
        android:hint="@string/your_name"
        android:paddingLeft="@dimen/dp10" />

    <EditText
        android:id="@+id/edit_text_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/background_edit_text"
        android:hint="@string/address"
        android:paddingLeft="@dimen/dp10" />

    <EditText
        android:id="@+id/edit_text_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/background_edit_text"
        android:hint="@string/date"
        android:paddingLeft="@dimen/dp10" />

    <EditText
        android:id="@+id/edit_text_filling"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/background_edit_text"
        android:hint="@string/design_or_filling"
        android:paddingLeft="@dimen/dp10" />

    <EditText
        android:id="@+id/edit_text_confectionary_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/background_edit_text"
        android:hint="@string/confectionary_name"
        android:paddingLeft="@dimen/dp10" />

    <EditText
        android:id="@+id/edit_text_quantity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/background_edit_text"
        android:hint="@string/quantity"
        android:paddingLeft="@dimen/dp10" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button_make_an_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp40"
            android:text="@string/make_an_order"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:padding="@dimen/dp10"
            android:fontFamily="serif"
            android:textStyle="bold"/>
    </RelativeLayout>

    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:id="@+id/nav_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>